--- a/deep-learning-with-pytorch-step-by-step/03_rethinking_training_loop.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/03_rethinking_training_loop.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPg1IepqtAuPU+DpVgGw0wz",
+      "authorship_tag": "ABX9TyP9AleyRMuSDC24fHPgRbmt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,12 +81,12 @@
       ],
       "metadata": {
         "id": "pgGfHWV5oZqU",
-        "outputId": "7e62dd4c-85ac-437d-99d8-031732bca9a7",
+        "outputId": "a070d008-1ccd-44eb-eee6-3a806b8540d3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,7 +118,7 @@
       "metadata": {
         "id": "TUEV99bdogt_"
       },
-      "execution_count": 35,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -157,7 +157,7 @@
       "metadata": {
         "id": "7i8oVtQPpATN"
       },
-      "execution_count": 36,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -189,7 +189,7 @@
       "metadata": {
         "id": "6c8vMI5Kpn3Z"
       },
-      "execution_count": 37,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -253,12 +253,12 @@
       ],
       "metadata": {
         "id": "x-rPHa6LRWuq",
-        "outputId": "cc1ca036-7963-407c-fc78-939352101f2e",
+        "outputId": "96886c86-2329-433c-cc2b-35c4f9009095",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,7 +277,7 @@
       "metadata": {
         "id": "cBF7SEYSTI_-"
       },
-      "execution_count": 39,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -337,12 +337,12 @@
       ],
       "metadata": {
         "id": "WeoEaGC9Tzxd",
-        "outputId": "08649dd8-243a-45c2-87e3-0db42c1c3c58",
+        "outputId": "416f0c62-8799-4309-8062-b6b153bb1c95",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -361,7 +361,7 @@
       "metadata": {
         "id": "m_h5sDaTewxh"
       },
-      "execution_count": 41,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -418,12 +418,12 @@
       ],
       "metadata": {
         "id": "xiuJG7Qtfg8E",
-        "outputId": "4982ac40-c22b-4859-b222-0a2c2c85812b",
+        "outputId": "41c50d7a-0bdd-404d-8fab-3fcaf4a455d2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -442,7 +442,7 @@
       "metadata": {
         "id": "kWvH9I1FgVfn"
       },
-      "execution_count": 43,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -461,12 +461,12 @@
       ],
       "metadata": {
         "id": "aoGyMDKOgefz",
-        "outputId": "cdee3605-7844-4476-cdfe-3cb6ee3d4486",
+        "outputId": "7ce4398c-29c1-4efd-fead-d5212c264e4d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -553,7 +553,7 @@
       "metadata": {
         "id": "b3XefPFXpRn_"
       },
-      "execution_count": 45,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -576,7 +576,7 @@
       "metadata": {
         "id": "VZysAc4ys19V"
       },
-      "execution_count": 46,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -609,15 +609,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cBmRPVIUtgUm",
-        "outputId": "539fc8b3-1e21-49fe-a452-73533afc66a1"
+        "outputId": "bbb5ef51-435a-4f85-bcae-3935d39b95ed"
       },
-      "execution_count": 47,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting model_configuration/v1.py\n"
+            "Writing model_configuration/v1.py\n"
           ]
         }
       ]
@@ -630,7 +630,7 @@
       "metadata": {
         "id": "8Ll6fOk5uSAL"
       },
-      "execution_count": 48,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -652,9 +652,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4auCaYf7ucuv",
-        "outputId": "ad361e94-0ac4-4eac-b261-46f4b3d0c988"
+        "outputId": "bb2fd7ec-55e6-4aad-aa85-bb73f03994cb"
       },
-      "execution_count": 49,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -664,7 +664,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 49
+          "execution_count": 16
         }
       ]
     },
@@ -701,15 +701,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PiCi6H2Kuvw6",
-        "outputId": "ab559165-e2ef-4918-c42f-a28555a8d552"
+        "outputId": "ed12c630-cea6-4b5e-aa27-e69f2160fc1a"
       },
-      "execution_count": 50,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting model_training/v1.py\n"
+            "Writing model_training/v1.py\n"
           ]
         }
       ]
@@ -722,7 +722,7 @@
       "metadata": {
         "id": "iUtoiOiZvVA7"
       },
-      "execution_count": 51,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -747,9 +747,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UXvayjiTxCXj",
-        "outputId": "86a004b2-8891-4139-ebce-a069bc5116b2"
+        "outputId": "661d9b7c-a724-4b52-e6fa-4f0547767c2f"
       },
-      "execution_count": 52,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -814,7 +814,7 @@
       "metadata": {
         "id": "kXCHwb_Mh1ZN"
       },
-      "execution_count": 53,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -829,12 +829,12 @@
       ],
       "metadata": {
         "id": "NfjY1KNTioKk",
-        "outputId": "3cc0c42a-4d26-4639-82a8-f61e7d36269b",
+        "outputId": "5f755f29-6617-4f97-8f74-54c9a0f3aa9b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 54,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -867,12 +867,12 @@
       ],
       "metadata": {
         "id": "0SphydMtki6C",
-        "outputId": "d6e8b5c8-5c96-4a67-9b36-8dec0d10a449",
+        "outputId": "474860d2-887d-43a0-f13c-3677f6f4e1f7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 55,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -936,7 +936,7 @@
       "metadata": {
         "id": "EOAzhlgMnDsy"
       },
-      "execution_count": 56,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -956,12 +956,12 @@
       ],
       "metadata": {
         "id": "8I2fCHaUnWDq",
-        "outputId": "935a30b5-80dd-4279-c3bc-4acb26fe66b7",
+        "outputId": "cfa5174f-c806-491a-c8fd-f779ef6e97d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 57,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1001,7 +1001,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 57
+          "execution_count": 24
         }
       ]
     },
@@ -1037,18 +1037,18 @@
       ],
       "metadata": {
         "id": "iMa22sWVyKAx",
-        "outputId": "e3e72e30-9980-43b2-92b4-ee5325f5343a",
+        "outputId": "4b334b29-edfa-4a2f-9e1d-34c2e2720754",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 58,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting data_preparation/v1.py\n"
+            "Writing data_preparation/v1.py\n"
           ]
         }
       ]
@@ -1061,7 +1061,7 @@
       "metadata": {
         "id": "_WPDJl1X0L-I"
       },
-      "execution_count": 59,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -1083,7 +1083,7 @@
       "metadata": {
         "id": "mCCDiFu40k9z"
       },
-      "execution_count": 60,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -1118,18 +1118,18 @@
       ],
       "metadata": {
         "id": "L8RR9G-W0xj2",
-        "outputId": "41584399-7bbb-4325-bd70-bb79f4a3e666",
+        "outputId": "f0362e29-0b4d-40e5-a0c4-4739accff937",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 61,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting model_training/v2.py\n"
+            "Writing model_training/v2.py\n"
           ]
         }
       ]
@@ -1142,7 +1142,7 @@
       "metadata": {
         "id": "Eif7Ri4t2jYe"
       },
-      "execution_count": 62,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -1161,12 +1161,12 @@
       ],
       "metadata": {
         "id": "r6J6geS87ene",
-        "outputId": "64e76b0e-e8f2-4327-e66c-472d0ce8b467",
+        "outputId": "a9cfaf15-dfd9-4b88-f672-6eb46b192bd4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 63,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -1199,7 +1199,7 @@
       "metadata": {
         "id": "0-SO9Fe17q9o"
       },
-      "execution_count": 64,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -1209,12 +1209,12 @@
       ],
       "metadata": {
         "id": "8BF3OIf975aY",
-        "outputId": "5810bb3d-dcfb-4f16-8a9e-23e00a938aab",
+        "outputId": "ffc3b4b5-f606-4ad3-e549-dce39ce7c3a8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 65,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -1256,9 +1256,224 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "From now on, it is very unlikely that you’ll ever use (full) batch gradient descent again, both in this book or in real life :-) \n",
+        "\n",
+        "So, it makes sense to, once again, organize a\n",
+        "piece of code that’s going to be used repeatedly into its own function: the minibatch\n",
+        "inner loop!\n",
+        "\n",
+        "The inner loop depends on three elements:\n",
+        "\n",
+        "* the device where data is being sent to\n",
+        "* data loader to draw mini-batches from\n",
+        "* step function, returning the corresponding loss"
+      ],
       "metadata": {
         "id": "5eP4OIY58f-w"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def mini_batch(device, data_loader, step):\n",
+        "  mini_batch_losses = []\n",
+        "  for x_batch, y_batch in data_loader:\n",
+        "    x_batch = x_batch.to(device)\n",
+        "    y_batch = y_batch.to(device)\n",
+        "\n",
+        "    mini_batch_loss = step(x_batch, y_batch)\n",
+        "    mini_batch_losses.append(mini_batch_loss)\n",
+        "  \n",
+        "  loss = np.mean(mini_batch_losses)\n",
+        "  return loss"
+      ],
+      "metadata": {
+        "id": "nCaO2fXPqiaD"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Since we realized that we were executing five times more updates per epoch due to the mini-batch inner loop. Before, 1,000\n",
+        "epochs meant 1,000 updates. \n",
+        "\n",
+        "Now, we only need 200 epochs to perform the same\n",
+        "1,000 updates."
+      ],
+      "metadata": {
+        "id": "qHemM4WwrxnQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%run -i data_preparation//v1.py\n",
+        "%run -i model_configuration/v1.py"
+      ],
+      "metadata": {
+        "id": "cXHuzakqsD2l"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile model_training/v3.py\n",
+        "\n",
+        "# Defines number of epochs\n",
+        "n_epochs = 200\n",
+        "losses = []\n",
+        "\n",
+        "for epoch in range(n_epochs):\n",
+        "  # mini_batch inner loop\n",
+        "  loss = mini_batch(device, train_loader, train_step)\n",
+        "  losses.append(loss)"
+      ],
+      "metadata": {
+        "id": "C-C6VS8XsMh1",
+        "outputId": "8d7c59f0-6a75-4d41-b77a-29d58392722c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing model_training/v3.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%run -i model_training/v3.py"
+      ],
+      "metadata": {
+        "id": "SzmQ3oMctvEq"
+      },
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Checks model's parameters\n",
+        "print(model.state_dict())"
+      ],
+      "metadata": {
+        "id": "pD2jeR73t2Yu",
+        "outputId": "762041bb-8bbb-490e-8888-cb3bcf7dde9e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "OrderedDict([('0.weight', tensor([[1.9959]])), ('0.bias', tensor([1.0534]))])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Random Split"
+      ],
+      "metadata": {
+        "id": "bGOoj1uhuG8p"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "PyTorch’s `random_split()` method is an easy and familiar way of performing a\n",
+        "training-validation split."
+      ],
+      "metadata": {
+        "id": "lhVJCAZGuIha"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile data_preparation/v2.py\n",
+        "\n",
+        "torch.manual_seed(13)\n",
+        "\n",
+        "# Builds tensors from numpy arrays BEFORE split\n",
+        "x_tensor = torch.as_tensor(x).float()\n",
+        "y_tensor = torch.as_tensor(y).float()\n",
+        "\n",
+        "# Builds dataset containing ALL data points\n",
+        "dataset = TensorDataset(x_tensor, y_tensor)\n",
+        "\n",
+        "# Performs the split\n",
+        "ratio = 0.8\n",
+        "n_total = len(dataset)\n",
+        "n_train = int(n_total * ratio)\n",
+        "n_val = n_total - n_train\n",
+        "# Performing train-validation split in PyTorch\n",
+        "train_data, val_data = random_split(dataset, [n_train, n_val])\n",
+        "\n",
+        "# Builds a loader of each set\n",
+        "train_loader = DataLoader(dataset=train_data, batch_size=16, shuffle=True)\n",
+        "val_loader = DataLoader(dataset=val_data, batch_size=16)"
+      ],
+      "metadata": {
+        "id": "eyGsp5N6ufUX",
+        "outputId": "85fbd256-d3e3-4f41-8660-94d41f246e1b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing data_preparation/v2.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%run -i data_preparation/v2.py"
+      ],
+      "metadata": {
+        "id": "NgleCDlVvtfR"
+      },
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Model Evaluation"
+      ],
+      "metadata": {
+        "id": "OLBsh4POv-QQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "n0BnDBLmv_pG"
       }
     }
   ]
