--- a/deep-learning-with-pytorch-step-by-step/04_going_classy.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/04_going_classy.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOOXuSeE4e4UTbxKuGUx5hL",
+      "authorship_tag": "ABX9TyMz346W3PklJsUwpAx0I1xs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,7 +81,7 @@
       ],
       "metadata": {
         "id": "pgGfHWV5oZqU",
-        "outputId": "5c105e35-a6e6-4984-ef18-91c37b669ccc",
+        "outputId": "0acb35c1-9f68-435a-b13b-ce7d9c5b3420",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -578,7 +578,7 @@
       "metadata": {
         "id": "b3XefPFXpRn_"
       },
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -602,17 +602,154 @@
       "metadata": {
         "id": "03DBO19XS95x"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
         "Instead of creating an attribute or method directly in the class, as we’ve been doing\n",
-        "so far, it is possible to use setattr to create them dynamically"
+        "so far, it is possible to use setattr to create them dynamically.\n",
+        "\n",
+        "**Mini-batch**\n",
+        "\n",
+        "The next method we need to add the mini-batch loop. We need to change it a bit, though… there, both\n",
+        "the data loader and the step function were arguments."
       ],
       "metadata": {
         "id": "tcl06BdmUUf-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def _mini_batch(self, validation=False):\n",
+        "  \"\"\"\n",
+        "  The mini-batch can be used with both loaders \n",
+        "  The argument `validation`defines which loader and corresponding step function is going to be used\n",
+        "  \"\"\"\n",
+        "  if validation:\n",
+        "    data_loader = self.val_loader\n",
+        "    step_fn = self.val_step\n",
+        "  else:\n",
+        "    data_loader = self.train_loader\n",
+        "    step_fn = self.train_step\n",
+        "\n",
+        "  if data_loader is None:\n",
+        "    return None\n",
+        "\n",
+        "  # Once the data loader and step function, this is the same mini-batch loop we had before \n",
+        "  mini_batch_losses = []\n",
+        "  for x_batch, y_batch in data_loader:\n",
+        "    x_batch = x_batch.to(device)\n",
+        "    y_batch = y_batch.to(device)\n",
+        "\n",
+        "    mini_batch_loss = step_fn(x_batch, y_batch)\n",
+        "    mini_batch_losses.append(mini_batch_loss)\n",
+        "  \n",
+        "  loss = np.mean(mini_batch_losses)\n",
+        "  return loss\n",
+        "\n",
+        "setattr(LinearRegression, \"_mini_batch\", _mini_batch)"
+      ],
+      "metadata": {
+        "id": "vY0QODjadiN4"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Moreover, we need to ensure the reproducibility of the training loop."
+      ],
+      "metadata": {
+        "id": "L7QZejV7gy4G"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def set_seed(self, seed=42):\n",
+        "  torch.backends.cudnn.deterministic = True\n",
+        "  torch.backends.cudnn.benchmark = False\n",
+        "  torch.manual_seed(seed)\n",
+        "  np.random.seed(seed)\n",
+        "\n",
+        "setattr(LinearRegression, \"set_seed\", set_seed)"
+      ],
+      "metadata": {
+        "id": "MjPmFYwegzZG"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Training Methods"
+      ],
+      "metadata": {
+        "id": "YKdr3ZPIhvDk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def train(self, n_epochs, seed=42):\n",
+        "  # To ensure reproducibility of the training process\n",
+        "  self.set_seed(seed)\n",
+        "\n",
+        "  for epoch in range(n_epochs):\n",
+        "    # Keeps track of the numbers of epochs by updating the corresponding attribute\n",
+        "    self.total_epochs += 1\n",
+        "\n",
+        "    # TRAINING\n",
+        "    # Performs training using mini-batches\n",
+        "    loss = self._mini_batch(validation=False)\n",
+        "    self.losses.append(loss)\n",
+        "\n",
+        "    # VALIDATION - no gradients in validation to prevent gradient computation!\n",
+        "    with torch.no_grad():\n",
+        "      # Performs evaluation using mini-batches\n",
+        "      val_loss = self._mini_batch(validation=True)\n",
+        "      self.val_losses.append(val_loss)\n",
+        "\n",
+        "    # If a SummaryWriter has been set...\n",
+        "    if self.summary_writer:\n",
+        "      scalars = {\"training\": loss}\n",
+        "      if val_loss is not None:\n",
+        "        scalars.update({\"validation\": val_loss})\n",
+        "      # Records both losses for each epoch under tag \"loss\"\n",
+        "      self.summary_writer.add_scalars(main_tag=\"loss\",\n",
+        "                                      tag_scalar_dict=scalars, \n",
+        "                                      global_step=epoch)\n",
+        "  if self.summary_writer:\n",
+        "    # Flushes the writer\n",
+        "    self.summary_writer.flush()\n",
+        "\n",
+        "setattr(LinearRegression, \"train\", train)"
+      ],
+      "metadata": {
+        "id": "ttPPNWWmh2Ra"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Saving and Loading Methods"
+      ],
+      "metadata": {
+        "id": "p4awVj5PlRfM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "ORuT8IbTlSUK"
       }
     },
     {
@@ -667,10 +804,27 @@
         "    return len(self.x)"
       ],
       "metadata": {
-        "id": "kXCHwb_Mh1ZN"
+        "id": "kXCHwb_Mh1ZN",
+        "outputId": "887d655b-3ff5-490f-f1e6-be98be16d194",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 235
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-13-cb82c8179b58>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mCustomDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_tensor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_tensor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx_tensor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_tensor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'Dataset' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -982,123 +1136,6 @@
       "metadata": {
         "id": "FaKrHaQ28Bz_"
       }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "###Mini-Batch"
-      ],
-      "metadata": {
-        "id": "nT6ko3vR8fMh"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "From now on, it is very unlikely that you’ll ever use (full) batch gradient descent again, both in this book or in real life :-) \n",
-        "\n",
-        "So, it makes sense to, once again, organize a\n",
-        "piece of code that’s going to be used repeatedly into its own function: the minibatch\n",
-        "inner loop!\n",
-        "\n",
-        "The inner loop depends on three elements:\n",
-        "\n",
-        "* the device where data is being sent to\n",
-        "* data loader to draw mini-batches from\n",
-        "* step function, returning the corresponding loss"
-      ],
-      "metadata": {
-        "id": "5eP4OIY58f-w"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def mini_batch(device, data_loader, step):\n",
-        "  mini_batch_losses = []\n",
-        "  for x_batch, y_batch in data_loader:\n",
-        "    x_batch = x_batch.to(device)\n",
-        "    y_batch = y_batch.to(device)\n",
-        "\n",
-        "    mini_batch_loss = step(x_batch, y_batch)\n",
-        "    mini_batch_losses.append(mini_batch_loss)\n",
-        "  \n",
-        "  loss = np.mean(mini_batch_losses)\n",
-        "  return loss"
-      ],
-      "metadata": {
-        "id": "nCaO2fXPqiaD"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Since we realized that we were executing five times more updates per epoch due to the mini-batch inner loop. Before, 1,000\n",
-        "epochs meant 1,000 updates. \n",
-        "\n",
-        "Now, we only need 200 epochs to perform the same\n",
-        "1,000 updates."
-      ],
-      "metadata": {
-        "id": "qHemM4WwrxnQ"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%run -i data_preparation//v1.py\n",
-        "%run -i model_configuration/v1.py"
-      ],
-      "metadata": {
-        "id": "cXHuzakqsD2l"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%%writefile model_training/v3.py\n",
-        "\n",
-        "# Defines number of epochs\n",
-        "n_epochs = 200\n",
-        "losses = []\n",
-        "\n",
-        "for epoch in range(n_epochs):\n",
-        "  # mini_batch inner loop\n",
-        "  loss = mini_batch(device, train_loader, train_step)\n",
-        "  losses.append(loss)"
-      ],
-      "metadata": {
-        "id": "C-C6VS8XsMh1"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%run -i model_training/v3.py"
-      ],
-      "metadata": {
-        "id": "SzmQ3oMctvEq"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Checks model's parameters\n",
-        "print(model.state_dict())"
-      ],
-      "metadata": {
-        "id": "pD2jeR73t2Yu"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
