--- a/deep-learning-with-pytorch-step-by-step/05_simple_classification_problem.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/05_simple_classification_problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNdPpQ6U3m1POLUpuF+wr+E",
+      "authorship_tag": "ABX9TyPo5X9cTmrb6E5joLT9xWxR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,7 +95,7 @@
       ],
       "metadata": {
         "id": "pgGfHWV5oZqU",
-        "outputId": "0e96d34a-88e9-4b46-c46c-6c0d7cdd6f77",
+        "outputId": "f59f5e67-92d7-4d79-8eab-28a2bc504abf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -119,7 +119,7 @@
       ],
       "metadata": {
         "id": "W84boD_8VMQV",
-        "outputId": "a902af81-028c-40a7-cdb6-9b9ff6d6b6b6",
+        "outputId": "2eeda4bf-d678-4ae9-ff1c-48d4fcdbde2f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -130,12 +130,12 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-11-18 04:08:57--  https://github.com/rahiakela/deep-learning-research-and-practice/raw/main/deep-learning-with-pytorch-step-by-step/networks/linear_regression.py\n",
-            "Resolving github.com (github.com)... 140.82.113.3\n",
-            "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
+            "--2022-11-21 03:47:57--  https://github.com/rahiakela/deep-learning-research-and-practice/raw/main/deep-learning-with-pytorch-step-by-step/networks/linear_regression.py\n",
+            "Resolving github.com (github.com)... 140.82.121.4\n",
+            "Connecting to github.com (github.com)|140.82.121.4|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/rahiakela/deep-learning-research-and-practice/main/deep-learning-with-pytorch-step-by-step/networks/linear_regression.py [following]\n",
-            "--2022-11-18 04:08:57--  https://raw.githubusercontent.com/rahiakela/deep-learning-research-and-practice/main/deep-learning-with-pytorch-step-by-step/networks/linear_regression.py\n",
+            "--2022-11-21 03:47:57--  https://raw.githubusercontent.com/rahiakela/deep-learning-research-and-practice/main/deep-learning-with-pytorch-step-by-step/networks/linear_regression.py\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
@@ -144,7 +144,7 @@
             "\n",
             "linear_regression.p 100%[===================>]   7.44K  --.-KB/s    in 0s      \n",
             "\n",
-            "2022-11-18 04:08:57 (46.2 MB/s) - ‘linear_regression.py’ saved [7621/7621]\n",
+            "2022-11-21 03:47:57 (42.1 MB/s) - ‘linear_regression.py’ saved [7621/7621]\n",
             "\n"
           ]
         }
@@ -245,13 +245,13 @@
       ],
       "metadata": {
         "id": "4VNwxL8XaoO7",
-        "outputId": "8f933cfc-b1f2-46c9-81f4-93b007c2ba11",
+        "outputId": "8c1d820a-47bb-4f61-bd0b-c563b6ff3e88",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 433
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -308,7 +308,7 @@
       "metadata": {
         "id": "x-rPHa6LRWuq"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -426,7 +426,7 @@
       "metadata": {
         "id": "WeoEaGC9Tzxd"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -439,12 +439,12 @@
       ],
       "metadata": {
         "id": "LO7taUG6r_44",
-        "outputId": "3a85c2c1-ab28-49be-c40a-7159f5149f1a",
+        "outputId": "76f73d38-b94d-4359-ed2d-e4759b7e6fb0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -465,13 +465,13 @@
       ],
       "metadata": {
         "id": "uc8zx220sSBT",
-        "outputId": "8c6f1584-cf91-422e-b8f2-eb93080661c5",
+        "outputId": "dbe52d66-b24d-41d8-85bc-b9d620b71abc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 361
         }
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -517,7 +517,7 @@
       "metadata": {
         "id": "PRM1ZoHryMyF"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -530,12 +530,12 @@
       ],
       "metadata": {
         "id": "8637euDzyYXl",
-        "outputId": "2232aceb-d28e-4596-ac48-9702a8df3035",
+        "outputId": "5c054b23-8e00-4b0e-d54c-887ac320e728",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -545,7 +545,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 12
         }
       ]
     },
@@ -565,13 +565,13 @@
       ],
       "metadata": {
         "id": "6BXgqRdLzydy",
-        "outputId": "66834598-042f-49c4-f256-cf6af454581d",
+        "outputId": "a17a1f45-c3c6-4272-f0d0-f458ad42de50",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 361
         }
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -658,7 +658,7 @@
       "metadata": {
         "id": "0bpgUYQq-_EB"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -671,12 +671,12 @@
       ],
       "metadata": {
         "id": "IxTcSuLg_K-t",
-        "outputId": "8a495a15-6386-4370-d729-954cb1291033",
+        "outputId": "2e693500-85d7-4695-a392-2eccc128f231",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -686,7 +686,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 15
         }
       ]
     },
@@ -717,12 +717,12 @@
       ],
       "metadata": {
         "id": "yRrjgkAJAUX-",
-        "outputId": "084cf02b-fa6c-4eb0-cf6c-d4b011d98f3e",
+        "outputId": "8f69ce0e-2029-4c2c-e42a-5c2d5ffe5bd2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -732,7 +732,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 16
         }
       ]
     },
@@ -743,13 +743,13 @@
       ],
       "metadata": {
         "id": "VTKOWXVZA5dG",
-        "outputId": "956caebb-6669-47d4-c95b-a5c468c6d682",
+        "outputId": "bf3fd36d-14d8-4a29-988f-137e508aa226",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 361
         }
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -802,12 +802,12 @@
       ],
       "metadata": {
         "id": "fTXmjqiW7aB2",
-        "outputId": "487c6336-2087-4533-85ba-ebf5767ff181",
+        "outputId": "bbb31f24-a2e1-4335-f739-095885f7f6a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -889,9 +889,179 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "A binary classification problem calls for the binary cross-entropy (BCE) loss,\n",
+        "sometimes known as log loss.\n",
+        "\n",
+        "The BCE loss requires the predicted probabilities, as returned by the sigmoid\n",
+        "function, and the true `labels (y)` for its computation.\n",
+        "\n",
+        "If the data point belongs to the positive `class (y=1)`, we would like our model to predict a probability close to one, right? \n",
+        "\n",
+        "A perfect one would result in the logarithm of one, which is zero. It makes sense; a perfect prediction means zero loss.\n",
+        "\n",
+        "$$\n",
+        "\\Large y_i = 1 \\Rightarrow \\text{error}_i=\\text{log}(\\text{P}(y_i=1))\n",
+        "$$\n",
+        "\n",
+        "What if the data point belongs to the negative `class (y=0)`? \n",
+        "\n",
+        "Then we cannot simply\n",
+        "use the predicted probability. Why not? \n",
+        "\n",
+        "Because the model outputs the probability\n",
+        "of a point belonging to the positive, not the negative, class.\n",
+        "\n",
+        "$$\n",
+        "\\Large \\text{P}(y_i=0)=1-\\text{P}(y_i=1)\n",
+        "$$\n",
+        "\n",
+        "And thus, the error associated with a data point belonging to the negative class\n",
+        "goes like this:\n",
+        "\n",
+        "$$\n",
+        "\\Large y_i = 0 \\Rightarrow \\text{error}_i=\\text{log}(1-\\text{P}(y_i=1))\n",
+        "$$\n",
+        "\n",
+        "Once all errors are computed, they are aggregated into a loss value. \n",
+        "\n",
+        "For the\n",
+        "binary-cross entropy loss, we simply take the average of the errors and invert its sign.\n",
+        "\n",
+        "$$\n",
+        "\\Large\n",
+        "\\text{BCE}(y)={-\\frac{1}{(N_{\\text{pos}}+N_{\\text{neg}})}\\Bigg[{\\sum_{i=1}^{N_{\\text{pos}}}{\\text{log}(\\text{P}(y_i=1))} + \\sum_{i=1}^{N_{\\text{neg}}}{\\text{log}(1 - \\text{P}(y_i=1))}}\\Bigg]}\n",
+        "$$\n",
+        "\n",
+        "Let’s assume we have two dummy data points, one for each class. Then, let’s\n",
+        "pretend our model made predictions for them: `0.9` and `0.2`. \n",
+        "\n",
+        "The predictions are not\n",
+        "bad since it predicts a `90%` probability of being positive for an actual positive, and\n",
+        "only `20%` of being positive for an actual negative."
+      ],
       "metadata": {
         "id": "M4_DEgYjfILZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dummy_labels = torch.tensor([1.0, 0.0])\n",
+        "dummy_predictions = torch.tensor([.9, .2])\n",
+        "\n",
+        "# Positive class (labels == 1)\n",
+        "positive_pred = dummy_predictions[dummy_labels == 1]\n",
+        "first_summation = torch.log(positive_pred).sum()\n",
+        "\n",
+        "# Negative class (labels == 0)\n",
+        "negative_pred = dummy_predictions[dummy_labels == 0]\n",
+        "second_summation = torch.log(1 - negative_pred).sum()\n",
+        "\n",
+        "# n_total = n_pos + n_neg\n",
+        "n_total = dummy_labels.size(0)\n",
+        "\n",
+        "loss = -(first_summation + second_summation) / n_total\n",
+        "loss"
+      ],
+      "metadata": {
+        "id": "KH8sBUKjZFuZ",
+        "outputId": "3f529d65-6587-440f-908d-873008aa0776",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(0.1643)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "believe the formula above is quite straightforward and easy to\n",
+        "understand. \n",
+        "\n",
+        "Unfortunately, it is usually skipped over, and only its equivalent is\n",
+        "presented:\n",
+        "\n",
+        "$$\n",
+        "\\Large\n",
+        "\\text{BCE}(y)={-\\frac{1}{N}\\sum_{i=1}^{N}{\\left[y_i \\text{log}(\\text{P}(y_i=1)) + (1-y_i) \\text{log}(1-\\text{P}(y_i=1))\\right]}}\n",
+        "$$\n",
+        "\n",
+        "If you pause for a\n",
+        "minute, you’ll realize that points in the positive `class (y=1)` have its second term equals zero, while points in the negative `class (y=0)` have its first term equals zero."
+      ],
+      "metadata": {
+        "id": "pFiMmoj1bndn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "summation = torch.sum(dummy_labels * torch.log(dummy_predictions) + (1 - dummy_labels) * torch.log(1- dummy_predictions))\n",
+        "\n",
+        "loss = - summation / n_total\n",
+        "loss"
+      ],
+      "metadata": {
+        "id": "ywuj3tIPb78E",
+        "outputId": "b3d8f0c5-3df7-47d1-d2b1-7bccb88642fb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(0.1643)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Of course, we got the same loss `(0.1643)` as before.\n",
+        "\n",
+        "**Reference**\n",
+        "\n",
+        "[Understanding binary cross-entropy / log loss: a visual explanation](https://towardsdatascience.com/understanding-binary-cross-entropy-log-loss-a-visual-explanation-a3ac6025181a)"
+      ],
+      "metadata": {
+        "id": "dkarTZoCccOB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###BCELoss"
+      ],
+      "metadata": {
+        "id": "DBtIGVqOcy-z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "wqbhnm2hc1UH"
       }
     }
   ]
